infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: cardiell1/auth
          ports:
          - containerPort: 3000
      #     volumeMounts:
      #     - name: file
      #       mountPath: /app/logs
      # volumes:
      #   - name: file
      #     hostPath:
      #       path: /run/desktop/mnt/host/c/logs/auth
      #       type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
