infra/k8s/conversations-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversations-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conversations
  template:
    metadata:
      labels:
        app: conversations
    spec:
      containers:
        - name: conversations
          image: cardiell1/conversations
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: conversations-srv
spec:
  selector:
    app: conversations
  ports:
    - name: conversations
      protocol: TCP
      port: 3000
      targetPort: 3000
