infra/k8s/conversations-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversations-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conversations-mongo
  template:
    metadata:
      labels:
        app: conversations-mongo
    spec:
      containers:
        - name: conversations-mongo
          image:  mongo:latest
          ports:
          - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: conversations-mongo-srv
spec:
  selector:
    app: conversations-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
