infra/k8s/employees-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employees
  template:
    metadata:
      labels:
        app: employees
    spec:
      containers:
        - name: employees
          image: cardiell1/employees
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: employees-srv
spec:
  selector:
    app: employees
  ports:
    - name: employees
      protocol: TCP
      port: 3000
      targetPort: 3000
